# c9watch

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  README.md  package.json
scripts/: baseline-results.md  test-pr14.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_detector.rs  test_parser.rs
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  debug_log.rs  lib.rs  polling.rs  web_server.rs
src-tauri/src/session/: detector.rs  history.rs  mod.rs  parser.rs  status.rs
src-tauri/tests/: parser_integration_test.rs
src/lib/: api.ts  slidingWindow.svelte.ts  types.ts
src/lib/components/: DebugConsole.svelte  ExpandedCardOverlay.svelte  FdaBanner.svelte  HistoryCardOverlay.svelte  MessageBubble.svelte  MessageNavMap.svelte  SessionCard.svelte  SessionHistory.svelte  index.ts
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/popover/: +page.svelte
website/: astro.config.mjs  package-lock.json  package.json
website/src/components/: Hero.astro  Landing.astro
website/src/content/docs/: changelog.md  features.md  how-it-works.md  index.mdx  install.md
website/src/styles/: global.css
